--- a/data/normalize_data.ipynb
+++ b/data/normalize_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +40,7 @@
        "Length: 124, dtype: int64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +71,7 @@
        "Length: 124, dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +233,277 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['MFFW', 'DF', 'MF', 'FWMF', 'FW', 'DFFW', 'MFDF', 'GK', 'DFMF',\n",
+       "       'FWDF'], dtype=object)"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Position'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['Position'] = df['Position'].apply(lambda x: x[:2] + ',' + x[2:] if len(x) > 2 else x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "max_games = df.groupby('Squad')['MP'].max().reset_index()\n",
+    "max_games.rename(columns={'MP': 'MaxGames'}, inplace=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.merge(df, max_games, on='Squad')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>Player</th>\n",
+       "      <th>Nation</th>\n",
+       "      <th>Position</th>\n",
+       "      <th>Squad</th>\n",
+       "      <th>Comp</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Born</th>\n",
+       "      <th>MP</th>\n",
+       "      <th>Starts</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Assists</th>\n",
+       "      <th>Shots</th>\n",
+       "      <th>SoT</th>\n",
+       "      <th>Int</th>\n",
+       "      <th>TklWon</th>\n",
+       "      <th>Recov</th>\n",
+       "      <th>Fls</th>\n",
+       "      <th>CrdY</th>\n",
+       "      <th>CrdR</th>\n",
+       "      <th>MaxGames</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Brenden Aaronson</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>MF,FW</td>\n",
+       "      <td>Leeds United</td>\n",
+       "      <td>Premier League</td>\n",
+       "      <td>22</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>20</td>\n",
+       "      <td>19</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>27</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>9</td>\n",
+       "      <td>86</td>\n",
+       "      <td>11</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Yunis Abdelhamid</td>\n",
+       "      <td>MAR</td>\n",
+       "      <td>DF</td>\n",
+       "      <td>Reims</td>\n",
+       "      <td>Ligue 1</td>\n",
+       "      <td>35</td>\n",
+       "      <td>1987</td>\n",
+       "      <td>22</td>\n",
+       "      <td>22</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>19</td>\n",
+       "      <td>1</td>\n",
+       "      <td>44</td>\n",
+       "      <td>35</td>\n",
+       "      <td>146</td>\n",
+       "      <td>29</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Himad Abdelli</td>\n",
+       "      <td>FRA</td>\n",
+       "      <td>MF,FW</td>\n",
+       "      <td>Angers</td>\n",
+       "      <td>Ligue 1</td>\n",
+       "      <td>23</td>\n",
+       "      <td>1999</td>\n",
+       "      <td>14</td>\n",
+       "      <td>8</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>9</td>\n",
+       "      <td>3</td>\n",
+       "      <td>8</td>\n",
+       "      <td>12</td>\n",
+       "      <td>70</td>\n",
+       "      <td>15</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Salis Abdul Samed</td>\n",
+       "      <td>GHA</td>\n",
+       "      <td>MF</td>\n",
+       "      <td>Lens</td>\n",
+       "      <td>Ligue 1</td>\n",
+       "      <td>22</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>20</td>\n",
+       "      <td>20</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>12</td>\n",
+       "      <td>3</td>\n",
+       "      <td>22</td>\n",
+       "      <td>16</td>\n",
+       "      <td>132</td>\n",
+       "      <td>49</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Laurent Abergel</td>\n",
+       "      <td>FRA</td>\n",
+       "      <td>MF</td>\n",
+       "      <td>Lorient</td>\n",
+       "      <td>Ligue 1</td>\n",
+       "      <td>30</td>\n",
+       "      <td>1993</td>\n",
+       "      <td>15</td>\n",
+       "      <td>15</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>15</td>\n",
+       "      <td>26</td>\n",
+       "      <td>84</td>\n",
+       "      <td>12</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>22</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 134 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   id             Player Nation Position         Squad            Comp  Age  \\\n",
+       "0   1   Brenden Aaronson    USA    MF,FW  Leeds United  Premier League   22   \n",
+       "1   2   Yunis Abdelhamid    MAR       DF         Reims         Ligue 1   35   \n",
+       "2   3      Himad Abdelli    FRA    MF,FW        Angers         Ligue 1   23   \n",
+       "3   4  Salis Abdul Samed    GHA       MF          Lens         Ligue 1   22   \n",
+       "4   5    Laurent Abergel    FRA       MF       Lorient         Ligue 1   30   \n",
+       "\n",
+       "   Born  MP  Starts  ...  Assists  Shots  SoT  Int  TklWon  Recov  Fls  CrdY  \\\n",
+       "0  2000  20      19  ...        2     27    5    1       9     86   11     2   \n",
+       "1  1987  22      22  ...        1     19    1   44      35    146   29     2   \n",
+       "2  1999  14       8  ...        0      9    3    8      12     70   15     1   \n",
+       "3  2000  20      20  ...        0     12    3   22      16    132   49     3   \n",
+       "4  1993  15      15  ...        1      4    0   15      26     84   12     2   \n",
+       "\n",
+       "   CrdR  MaxGames  \n",
+       "0     0        21  \n",
+       "1     0        22  \n",
+       "2     0        22  \n",
+       "3     0        22  \n",
+       "4     0        22  \n",
+       "\n",
+       "[5 rows x 134 columns]"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['MaxPossibleMinutes'] = df['MaxGames'] * 90\n",
+    "df['MinutesOnBench'] = df['MaxPossibleMinutes'] - df['Min']\n",
+    "df['PlayBySuplente'] = df['MP'] - df['Starts']\n",
+    "df['NotPlayed'] = df['MaxGames'] - df['MP']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
