--- a/data/normalize_data.ipynb
+++ b/data/normalize_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +40,7 @@
        "Length: 124, dtype: int64"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +71,7 @@
        "Length: 124, dtype: int64"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -119,16 +119,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df['Assists'] = (df['Assists/90'] * (df['Min'] / 90)).round().astype(int)"
+    "df['Assists'] = (df['Assists/90'] * (df['Min'] / 90)).round().astype(int)\n",
+    "df['Goals/90'] = (df['Goals'] / df['Min']) * 90\n",
+    "df['Goals/90'] = df['Goals/90'].round(2)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +245,7 @@
        "       'FWDF'], dtype=object)"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +319,7 @@
        "      <th>MP</th>\n",
        "      <th>Starts</th>\n",
        "      <th>...</th>\n",
-       "      <th>Assists</th>\n",
+       "      <th>Goals/90</th>\n",
        "      <th>Shots</th>\n",
        "      <th>SoT</th>\n",
        "      <th>Int</th>\n",
@@ -343,7 +345,7 @@
        "      <td>20</td>\n",
        "      <td>19</td>\n",
        "      <td>...</td>\n",
-       "      <td>2</td>\n",
+       "      <td>0.06</td>\n",
        "      <td>27</td>\n",
        "      <td>5</td>\n",
        "      <td>1</td>\n",
@@ -367,7 +369,7 @@
        "      <td>22</td>\n",
        "      <td>22</td>\n",
        "      <td>...</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0.00</td>\n",
        "      <td>19</td>\n",
        "      <td>1</td>\n",
        "      <td>44</td>\n",
@@ -391,7 +393,7 @@
        "      <td>14</td>\n",
        "      <td>8</td>\n",
        "      <td>...</td>\n",
-       "      <td>0</td>\n",
+       "      <td>0.00</td>\n",
        "      <td>9</td>\n",
        "      <td>3</td>\n",
        "      <td>8</td>\n",
@@ -415,7 +417,7 @@
        "      <td>20</td>\n",
        "      <td>20</td>\n",
        "      <td>...</td>\n",
-       "      <td>0</td>\n",
+       "      <td>0.05</td>\n",
        "      <td>12</td>\n",
        "      <td>3</td>\n",
        "      <td>22</td>\n",
@@ -439,7 +441,7 @@
        "      <td>15</td>\n",
        "      <td>15</td>\n",
        "      <td>...</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0.00</td>\n",
        "      <td>4</td>\n",
        "      <td>0</td>\n",
        "      <td>15</td>\n",
@@ -452,7 +454,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 134 columns</p>\n",
+       "<p>5 rows × 135 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -463,12 +465,12 @@
        "3   4  Salis Abdul Samed    GHA       MF          Lens         Ligue 1   22   \n",
        "4   5    Laurent Abergel    FRA       MF       Lorient         Ligue 1   30   \n",
        "\n",
-       "   Born  MP  Starts  ...  Assists  Shots  SoT  Int  TklWon  Recov  Fls  CrdY  \\\n",
-       "0  2000  20      19  ...        2     27    5    1       9     86   11     2   \n",
-       "1  1987  22      22  ...        1     19    1   44      35    146   29     2   \n",
-       "2  1999  14       8  ...        0      9    3    8      12     70   15     1   \n",
-       "3  2000  20      20  ...        0     12    3   22      16    132   49     3   \n",
-       "4  1993  15      15  ...        1      4    0   15      26     84   12     2   \n",
+       "   Born  MP  Starts  ...  Goals/90  Shots  SoT  Int  TklWon  Recov  Fls  CrdY  \\\n",
+       "0  2000  20      19  ...      0.06     27    5    1       9     86   11     2   \n",
+       "1  1987  22      22  ...      0.00     19    1   44      35    146   29     2   \n",
+       "2  1999  14       8  ...      0.00      9    3    8      12     70   15     1   \n",
+       "3  2000  20      20  ...      0.05     12    3   22      16    132   49     3   \n",
+       "4  1993  15      15  ...      0.00      4    0   15      26     84   12     2   \n",
        "\n",
        "   CrdR  MaxGames  \n",
        "0     0        21  \n",
@@ -477,10 +479,10 @@
        "3     0        22  \n",
        "4     0        22  \n",
        "\n",
-       "[5 rows x 134 columns]"
+       "[5 rows x 135 columns]"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -491,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -503,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -520,7 +522,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "env_ds",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -534,7 +536,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.15"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
