--- a/data/normalize_data.ipynb
+++ b/data/normalize_data.ipynb
@@ -156,7 +156,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "variables = ['Shots', 'SoT', 'Int', 'TklWon', 'Recov', 'Fls', 'CrdY', 'CrdR']"
+    "variables = ['Shots', 'SoT', 'Int', 'TklWon', 'Recov', 'Fls', 'CrdY', 'CrdR','AerWon','AerLost', 'Tkl', 'ToSuc', 'ToAtt']"
    ]
   },
   {
@@ -177,6 +177,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
       "False\n",
       "False\n",
       "False\n",
@@ -219,12 +224,21 @@
       "3  Salis Abdul Samed  1799     12    3   22      16    132   49     3     0   \n",
       "4    Laurent Abergel  1165      4    0   15      26     84   12     2     0   \n",
       "\n",
-      "   Shots/90  SoT/90  Int/90  TklWon/90  Recov/90  Fls/90  CrdY/90  CrdR/90  \n",
-      "0      1.53    0.28    0.06       0.51      4.86    0.62     0.11      0.0  \n",
-      "1      0.86    0.05    2.00       1.59      6.64    1.32     0.09      0.0  \n",
-      "2      1.05    0.35    0.93       1.40      8.14    1.74     0.12      0.0  \n",
-      "3      0.60    0.15    1.10       0.80      6.60    2.45     0.15      0.0  \n",
-      "4      0.31    0.00    1.16       2.02      6.51    0.93     0.16      0.0  \n"
+      "   ...  TklWon/90  Recov/90  Fls/90  CrdY/90  CrdR/90  AerWon/90  AerLost/90  \\\n",
+      "0  ...       0.51      4.86    0.62     0.11      0.0       0.34        1.19   \n",
+      "1  ...       1.59      6.64    1.32     0.09      0.0       2.18        1.23   \n",
+      "2  ...       1.40      8.14    1.74     0.12      0.0       0.93        1.05   \n",
+      "3  ...       0.80      6.60    2.45     0.15      0.0       0.50        0.50   \n",
+      "4  ...       2.02      6.51    0.93     0.16      0.0       0.31        0.39   \n",
+      "\n",
+      "   Tkl/90  ToSuc/90  ToAtt/90  \n",
+      "0    1.64      1.19      3.73  \n",
+      "1    2.50      0.32      0.68  \n",
+      "2    2.91      2.09      3.84  \n",
+      "3    1.50      0.70      1.25  \n",
+      "4    3.80      0.54      0.93  \n",
+      "\n",
+      "[5 rows x 28 columns]\n"
      ]
     }
    ],
@@ -237,6 +251,15 @@
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['Aer'] = df['AerWon'] + df['AerLost']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -245,7 +268,7 @@
        "       'FWDF'], dtype=object)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -319,15 +342,15 @@
        "      <th>MP</th>\n",
        "      <th>Starts</th>\n",
        "      <th>...</th>\n",
-       "      <th>Goals/90</th>\n",
-       "      <th>Shots</th>\n",
-       "      <th>SoT</th>\n",
-       "      <th>Int</th>\n",
-       "      <th>TklWon</th>\n",
-       "      <th>Recov</th>\n",
        "      <th>Fls</th>\n",
        "      <th>CrdY</th>\n",
        "      <th>CrdR</th>\n",
+       "      <th>AerWon</th>\n",
+       "      <th>AerLost</th>\n",
+       "      <th>Tkl</th>\n",
+       "      <th>ToSuc</th>\n",
+       "      <th>ToAtt</th>\n",
+       "      <th>Aer</th>\n",
        "      <th>MaxGames</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -345,15 +368,15 @@
        "      <td>20</td>\n",
        "      <td>19</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.06</td>\n",
-       "      <td>27</td>\n",
-       "      <td>5</td>\n",
-       "      <td>1</td>\n",
-       "      <td>9</td>\n",
-       "      <td>86</td>\n",
        "      <td>11</td>\n",
        "      <td>2</td>\n",
        "      <td>0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>21</td>\n",
+       "      <td>29</td>\n",
+       "      <td>21</td>\n",
+       "      <td>66</td>\n",
+       "      <td>27</td>\n",
        "      <td>21</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -369,15 +392,15 @@
        "      <td>22</td>\n",
        "      <td>22</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>19</td>\n",
-       "      <td>1</td>\n",
-       "      <td>44</td>\n",
-       "      <td>35</td>\n",
-       "      <td>146</td>\n",
        "      <td>29</td>\n",
        "      <td>2</td>\n",
        "      <td>0</td>\n",
+       "      <td>48</td>\n",
+       "      <td>27</td>\n",
+       "      <td>55</td>\n",
+       "      <td>7</td>\n",
+       "      <td>15</td>\n",
+       "      <td>75</td>\n",
        "      <td>22</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -393,15 +416,15 @@
        "      <td>14</td>\n",
        "      <td>8</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>9</td>\n",
-       "      <td>3</td>\n",
-       "      <td>8</td>\n",
-       "      <td>12</td>\n",
-       "      <td>70</td>\n",
        "      <td>15</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>9</td>\n",
+       "      <td>25</td>\n",
+       "      <td>18</td>\n",
+       "      <td>33</td>\n",
+       "      <td>17</td>\n",
        "      <td>22</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -417,15 +440,15 @@
        "      <td>20</td>\n",
        "      <td>20</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.05</td>\n",
-       "      <td>12</td>\n",
-       "      <td>3</td>\n",
-       "      <td>22</td>\n",
-       "      <td>16</td>\n",
-       "      <td>132</td>\n",
        "      <td>49</td>\n",
        "      <td>3</td>\n",
        "      <td>0</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>30</td>\n",
+       "      <td>14</td>\n",
+       "      <td>25</td>\n",
+       "      <td>20</td>\n",
        "      <td>22</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -441,20 +464,20 @@
        "      <td>15</td>\n",
        "      <td>15</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0</td>\n",
-       "      <td>15</td>\n",
-       "      <td>26</td>\n",
-       "      <td>84</td>\n",
        "      <td>12</td>\n",
        "      <td>2</td>\n",
        "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>49</td>\n",
+       "      <td>7</td>\n",
+       "      <td>12</td>\n",
+       "      <td>9</td>\n",
        "      <td>22</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 135 columns</p>\n",
+       "<p>5 rows × 141 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -465,24 +488,24 @@
        "3   4  Salis Abdul Samed    GHA       MF          Lens         Ligue 1   22   \n",
        "4   5    Laurent Abergel    FRA       MF       Lorient         Ligue 1   30   \n",
        "\n",
-       "   Born  MP  Starts  ...  Goals/90  Shots  SoT  Int  TklWon  Recov  Fls  CrdY  \\\n",
-       "0  2000  20      19  ...      0.06     27    5    1       9     86   11     2   \n",
-       "1  1987  22      22  ...      0.00     19    1   44      35    146   29     2   \n",
-       "2  1999  14       8  ...      0.00      9    3    8      12     70   15     1   \n",
-       "3  2000  20      20  ...      0.05     12    3   22      16    132   49     3   \n",
-       "4  1993  15      15  ...      0.00      4    0   15      26     84   12     2   \n",
+       "   Born  MP  Starts  ...  Fls  CrdY  CrdR  AerWon  AerLost  Tkl  ToSuc  ToAtt  \\\n",
+       "0  2000  20      19  ...   11     2     0       6       21   29     21     66   \n",
+       "1  1987  22      22  ...   29     2     0      48       27   55      7     15   \n",
+       "2  1999  14       8  ...   15     1     0       8        9   25     18     33   \n",
+       "3  2000  20      20  ...   49     3     0      10       10   30     14     25   \n",
+       "4  1993  15      15  ...   12     2     0       4        5   49      7     12   \n",
        "\n",
-       "   CrdR  MaxGames  \n",
-       "0     0        21  \n",
-       "1     0        22  \n",
-       "2     0        22  \n",
-       "3     0        22  \n",
-       "4     0        22  \n",
+       "   Aer  MaxGames  \n",
+       "0   27        21  \n",
+       "1   75        22  \n",
+       "2   17        22  \n",
+       "3   20        22  \n",
+       "4    9        22  \n",
        "\n",
-       "[5 rows x 135 columns]"
+       "[5 rows x 141 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -493,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -505,7 +528,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
