--- a/data/normalize_data.ipynb
+++ b/data/normalize_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,42 +11,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "df = pd.read_csv('player_stats_initial.csv', delimiter=';')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "id          0\n",
-       "Player      0\n",
-       "Nation      1\n",
-       "Position    0\n",
-       "Squad       0\n",
-       "           ..\n",
-       "OG          0\n",
-       "Recov       0\n",
-       "AerWon      0\n",
-       "AerLost     0\n",
-       "AerWon%     0\n",
-       "Length: 124, dtype: int64"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.isnull().sum()"
    ]
   },
   {
@@ -77,7 +46,59 @@
     }
    ],
    "source": [
+    "df.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "id          0\n",
+       "Player      0\n",
+       "Nation      1\n",
+       "Position    0\n",
+       "Squad       0\n",
+       "           ..\n",
+       "OG          0\n",
+       "Recov       0\n",
+       "AerWon      0\n",
+       "AerLost     0\n",
+       "AerWon%     0\n",
+       "Length: 124, dtype: int64"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "df.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['MFFW', 'DF', 'MF', 'FWMF', 'FW', 'DFFW', 'MFDF', 'GK', 'DFMF',\n",
+       "       'FWDF'], dtype=object)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Position'].unique()"
    ]
   },
   {
